--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title:            Jaan
-titlehilight:     Altosaar
-tagline:          PhD student at Princeton.
-description:      PhD student at Princeton.
-logo:             jathumb.jpg
+title:            Angeles
+titlehilight:     Aldunate
+#tagline:          
+#description:      
+#logo:             
 #Comment out url when working locally to resolve base urls correctly
 # url: https://jaan.io
 
